--- a/DataPreparer/docker-compose.yml
+++ b/DataPreparer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   minio:
-    image: minio/minio:RELEASE.2025-01-01T00-00-00Z
+    image: minio/minio:latest
     command: server /data --console-address ":9001"
     environment:
       MINIO_ROOT_USER: minio
