--- a/Deployer/requirements.txt
+++ b/Deployer/requirements.txt
@@ -1,7 +1,5 @@
-flask>=2.0.0
-gunicorn>=20.1.0
-requests
-docker
-python-dotenv
-psycopg2-binary
-sqlalchemy
+flask
+minio
+pandas
+joblib
+scikit-learn
