--- a/ModelSelector/docker-compose.yml
+++ b/ModelSelector/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - microlearn-network
 
   minio:
-    image: minio/minio:RELEASE.2025-01-01T00-00-00Z
+    image: minio/minio:latest
     command: server /data
     environment:
       MINIO_ROOT_USER: minio
