--- a/Orchestrator/package.json
+++ b/Orchestrator/package.json
@@ -13,6 +13,8 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "js-yaml": "^4.1.0",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "axios": "^1.6.2",
+        "redis": "^4.6.10"
     }
 }
