--- a/microlearn-frontend/package.json
+++ b/microlearn-frontend/package.json
@@ -11,7 +11,11 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "chart.js": "^4.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "d3": "^7.8.5",
+    "axios": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
